<resources>
    <string name="app_name">Checker</string>
    <string name="about">About</string>
    <string name="widevine">Widevine</string>
    <string name="drm_security_level">Security Level</string>
    <string name="drm_version">Version</string>
    <string name="drm_vendor">Vendor</string>
    <string name="drm_desc">Description</string>
    <string name="drm_algo">Algorithm</string>
    <string name="basic">Basic</string>
    <string name="basic_android_version">Android version</string>
    <string name="basic_android_sdk">SDK Level</string>
    <string name="basic_android_id">Android ID</string>
    <string name="basic_brand">Brand</string>
    <string name="basic_model">Model</string>
    <string name="basic_model_sku">SKU</string>
    <string name="basic_build_type">Build type</string>
    <string name="basic_build_fingerprint">Build fingerprint</string>
    <string name="connectivity">Connectivity</string>
    <string name="connectivity_radio">Radio version</string>
    <string name="connectivity_gnss">GNSS HAL list</string>
    <string name="connectivity_gnss_not_found">No GNSS HIDL HAL found!!</string>
    <string name="media">Media</string>
    <string name="media_supported_hdr_types">Supported HDR types</string>
    <string name="media_wide_color_gamut">Wide color gamut</string>
    <string name="abnormalities">Abnormalities</string>
    <string name="abnormalities_widevine">Widevine protection is software based.</string>
    <string name="abnormalities_verified_boot_stat">Abnormalities found in verified boot state.</string>
    <string name="abnormalities_baseband_broken">Baseband is broken.</string>
    <string name="abnormalities_gnss_hal_broken">GNSS HAL is broken.</string>
    <string name="abnormalities_selinux_not_enforcing">SELinux is not enforcing.</string>
    <string name="abnormalities_signed_using_a_publickey">Your build is signed using a public key.</string>
    <string name="abnormalities_undefined_signing_key">Your build tag doesn\'t contain a signing key.</string>
    <string name="abnormalities_environment_broken">Your system environment is broken.</string>
    <string name="github">Open-sourced under GPL-3.0.\nCopyright © AkaneTan, 123Duo3 2023</string>
    <string name="normal_title">No abnormalities found.</string>
    <string name="normal_summary">You\'re running a sane build.</string>
    <string name="notice_title">Suspicious traces found.</string>
    <string name="notice_summary">Might not be a problem, but it\'s lowering your system\'s stability.</string>
    <string name="critical_title">Abnormalities found.</string>
    <string name="critical_summary">Consider reconfiguring your device tree or ROM.</string>
    <string name="security">Security</string>
    <string name="security_selinux_state">SELinux state</string>
    <string name="media_not_granted">Not granted</string>
    <string name="media_granted">Granted</string>
    <string name="media_window_available">Window available</string>
    <string name="media_window_unavailable">Window unavailable</string>
    <string name="security_verified_boot_state">Verified boot state</string>
    <string name="security_signing_key">Signing key</string>
    <string name="architecture">Architecture</string>
    <string name="architecture_soc_model">SoC model</string>
    <string name="architecture_failed_to_retrieve_soc">Failed to retrieve SoC model!</string>
    <string name="architecture_supported_abi">Supported ABIs</string>
    <string name="universality">Universality</string>
    <string name="universality_treble_support">Treble status</string>
    <string name="universality_gsi_compatibility">GSI Compatibility</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="universality_dsu_status">DSU Status</string>
</resources>