<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/frame"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp"
            tools:background="?attr/colorPrimaryContainer">

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textFontWeight="500"
                android:textSize="16sp"
                tools:text="@string/normal_title" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textFontWeight="500"
                android:textSize="16sp"
                tools:text="@string/normal_summary" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/abnormal_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        app:cardCornerRadius="8dp"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:paddingEnd="18dp"
            android:paddingBottom="22dp">

            <org.akanework.checker.ui.TrimmedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/abnormalities"
                android:textColor="?attr/colorOnSurface"
                android:textFontWeight="600"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/abnormal_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:paddingEnd="18dp"
            android:paddingBottom="22dp">

            <org.akanework.checker.ui.TrimmedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/architecture"
                android:textColor="?attr/colorOnSurface"
                android:textFontWeight="600"
                android:textSize="20sp" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/architecture_soc_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:textFontWeight="500"
                tools:text="Android version - " />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/architecture_supported"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:textFontWeight="500"
                tools:text="Android version - " />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:paddingEnd="18dp"
            android:paddingBottom="22dp">

            <org.akanework.checker.ui.TrimmedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/basic"
                android:textColor="?attr/colorOnSurface"
                android:textFontWeight="600"
                android:textSize="20sp" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/basic_android_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:textFontWeight="500"
                tools:text="Android version - " />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/basic_sdk_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:textFontWeight="500"
                tools:text="SDK Level - " />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/basic_android_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                tools:text="Android ID - " />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/basic_android_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                tools:text="Android ID - " />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/basic_android_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                tools:text="Android ID - " />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/basic_model_sku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                tools:text="Android ID - " />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/basic_build_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                tools:text="Android ID - " />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/basic_fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                tools:text="Android ID - " />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="22dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:paddingEnd="18dp"
            android:paddingBottom="24dp">

            <org.akanework.checker.ui.TrimmedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/connectivity"
                android:textColor="?attr/colorOnSurface"
                android:textFontWeight="600"
                android:textSize="20sp" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/connectivity_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                tools:text="@string/connectivity_radio" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/connectivity_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connectivity_gnss_not_found"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="22dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:paddingEnd="18dp"
            android:paddingBottom="24dp">

            <org.akanework.checker.ui.TrimmedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/media"
                android:textColor="?attr/colorOnSurface"
                android:textFontWeight="600"
                android:textSize="20sp" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/media_hdr_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                tools:text="@string/connectivity_radio" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/media_wide_color_gamut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                tools:text="@string/connectivity_radio" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="22dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:paddingEnd="18dp"
            android:paddingBottom="24dp">

            <org.akanework.checker.ui.TrimmedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/security"
                android:textColor="?attr/colorOnSurface"
                android:textFontWeight="600"
                android:textSize="20sp" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/security_selinux_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:textFontWeight="500"
                tools:text="@string/connectivity_radio" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/security_verified_boot_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:textFontWeight="500"
                tools:text="@string/connectivity_radio" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/security_system_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                tools:text="@string/connectivity_radio" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="64dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:paddingEnd="18dp"
            android:paddingBottom="22dp">

            <org.akanework.checker.ui.TrimmedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/widevine"
                android:textColor="?attr/colorOnSurface"
                android:textFontWeight="600"
                android:textSize="20sp" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/widevine_hdcp_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textFontWeight="500"
                android:textSize="16sp"
                tools:text="Version - 16.1.0" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/widevine_name_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="16sp"
                tools:text="Version - 16.1.0" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/widevine_vendor_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="16sp"
                tools:text="Version - 16.1.0" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/widevine_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="16sp"
                tools:text="Version - 16.1.0" />

            <org.akanework.checker.ui.TrimmedTextView
                android:id="@+id/widevine_algo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="16sp"
                tools:text="Version - 16.1.0" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>